// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correct process dynamic placet 1`] = `
Object {
  "Options": Object {
    "withWrapper": false,
  },
  "html": "
<h1>Title</h1>
<div>Content for dummy component</div>
<!--0-->
<!--0-->
",
}
`;

exports[`correct process dynamic placet 2`] = `
Object {
  "Options": Object {
    "withWrapper": true,
  },
  "html": "
<div class=\\"wrapper\\">
  <h1>Title</h1>
  <div>Content for dummy component</div>
</div>
<!--0-->
",
}
`;

exports[`renders correctly 1`] = `
Object {
  "Options": Object {
    "routerData": Object {
      "activePageComponent": [Function],
      "activePageOptions": Object {
        "path": "base",
        "text": "Base page",
      },
      "name": "",
      "pageLoaded": false,
      "params": Object {},
      "query": "",
      "url": "",
    },
  },
  "html": "
<h1>Title</h1>
<div>Content for dummy component</div>
",
}
`;
